--- a/.qovery.yml
+++ b/.qovery.yml
@@ -12,6 +12,8 @@ routers:
     custom_domains:
       - branch: main
         domain: www.brasserie-bakpaker.fr
+      - branch: master
+        domain: www.brasserie-bakpaker.fr
     routes:
       - application_name: brasserie-76-flo
         paths:
